fix: Update URL handling in Picture class
- Added URI import and replaced deprecated URL constructor
- Changed direct URL creation to use URI.create().toURL() pattern
- Improved error handling with specific exception catching
- Follows same pattern used in other stdlib classes